--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     - name: cert-manager
       namespace: cert-manager
     - name: metallb
-      namespace: metallb-system
+      namespace: networking
   install:
     createNamespace: true
     remediation:
