--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -35,6 +35,7 @@ spec:
     domain: "${SECRET_PUBLIC_DOMAIN}"
     ingress:
       enabled: true
+      ingressClassName: traefik
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
