create ingressclass again

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -39,10 +39,10 @@ spec:
     ingressRoute:
       dashboard:
         enabled: false
-    # ingressClass:
-    #   enabled: true
-    #   isDefaultClass: true
-    #   fallbackApiVersion: v1
+    ingressClass:
+      enabled: true
+      isDefaultClass: true
+      fallbackApiVersion: v1
     providers:
       kubernetesCRD:
         enabled: true
