--- a/cluster/apps/default/grafana/helm-release.yaml
+++ b/cluster/apps/default/grafana/helm-release.yaml
@@ -36,10 +36,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
-          - host: grafana.${SECRET_PUBLIC_DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
+          - "grafana.${SECRET_PUBLIC_DOMAIN}"
         tls:
           - hosts:
               - grafana.${SECRET_PUBLIC_DOMAIN}
