--- a/cluster/apps/default/changedetection-io/helm-release.yaml
+++ b/cluster/apps/default/changedetection-io/helm-release.yaml
@@ -32,6 +32,7 @@ spec:
           ingressClassName: "traefik"
           annotations:
             hajimari.io/enable: "true"
+            hajimari.io/icon: "swap-horizontal"
             cert-manager.io/cluster-issuer: letsencrypt-production
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
             traefik.ingress.kubernetes.io/router.tls: "true"
