--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -63,7 +63,7 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.tls: "true"
-          # traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+          traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
@@ -71,10 +71,10 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-        tls:
-          - hosts:
-              - home-assistant.${SECRET_PUBLIC_DOMAIN}
-            secretName: "${SECRET_PUBLIC_DOMAIN/./-}"
+        # tls:
+        #   - hosts:
+        #       - hajimari.${SECRET_PUBLIC_DOMAIN}
+        #     secretName: "${SECRET_PUBLIC_DOMAIN/./-}"
     data:
       enabled: false
     resources:
