--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -26,6 +26,22 @@ spec:
       tag: 2022.8.7
     env:
       TZ: "${TIMEZONE}"
+    ingress:
+        main:
+          enabled: true
+          ingressClassName: "traefik"
+          annotations:
+            hajimari.io/enable: "true"
+            hajimari.io/icon: "home-assistant"
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+            external-dns/is-public: "true"
+          hosts:
+            - host: home-assistant.${SECRET_PUBLIC_DOMAIN}
+              paths:
+                - path: /
+                  pathType: Prefix
     persistence:
       config:
         enabled: true
