--- a/cluster/apps/default/jellyfin/helm-release.yaml
+++ b/cluster/apps/default/jellyfin/helm-release.yaml
@@ -27,8 +27,18 @@ spec:
       TZ: "${TIMEZONE}"
       JELLYFIN_CACHE_DIR: /config/cache
     ingress:
-      main:
-        enabled: false
+        main:
+          enabled: true
+          ingressClassName: "traefik"
+          annotations:
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+            external-dns/is-public: "true"
+          hosts:
+            - host: jellyfin.${SECRET_PUBLIC_DOMAIN}
+              paths:
+                - path: /
+                  pathType: Prefix
     persistence:
       config:
         enabled: true
