--- a/cluster/apps/default/lidarr/helm-release.yaml
+++ b/cluster/apps/default/lidarr/helm-release.yaml
@@ -26,6 +26,20 @@ spec:
       tag: v1.0.2.2592
     env:
       TZ: "${TIMEZONE}"
+    ingress:
+        main:
+          enabled: true
+          ingressClassName: "traefik"
+          annotations:
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+            external-dns/is-public: "true"
+          hosts:
+            - host: lidarr.${SECRET_PUBLIC_DOMAIN}
+              paths:
+                - path: /
+                  pathType: Prefix
     persistence:
       config:
         enabled: true
