--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -27,3 +27,12 @@ spec:
       defaultReplicaCount: 4
     longhornUI:
       replicas: 3
+    ingress:
+      enabled: true
+      host: longhorn.${SECRET_PUBLIC_DOMAIN}
+      path: /
+      annotations:
+        traefik.ingress.kubernetes.io/router.entrypoints: websecure
+        traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+        external-dns/is-public: "true"
