--- a/cluster/apps/default/overseerr/helm-release.yaml
+++ b/cluster/apps/default/overseerr/helm-release.yaml
@@ -27,11 +27,22 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       LOG_LEVEL: "info"
-    service:
-      main:
-        ports:
-          http:
-            port: 5055
+    ingress:
+        main:
+          enabled: true
+          ingressClassName: "traefik"
+          annotations:
+            hajimari.io/enable: "true"
+            hajimari.io/icon: "eye-circle"
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+            external-dns/is-public: "true"
+          hosts:
+            - host: requests.${SECRET_PUBLIC_DOMAIN}
+              paths:
+                - path: /
+                  pathType: Prefix
     persistence:
       config:
         enabled: true
