--- a/cluster/apps/default/jellyfin/helm-release.yaml
+++ b/cluster/apps/default/jellyfin/helm-release.yaml
@@ -31,6 +31,8 @@ spec:
           enabled: true
           ingressClassName: "traefik"
           annotations:
+            hajimari.io/enable: "true"
+            hajimari.io/icon: "play-network"
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
             external-dns/is-public: "true"
