--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -41,6 +41,21 @@ spec:
         loadBalancerIP: "10.87.42.12"
         port:
           port: 32400
+    ingress:
+      main:
+        enabled: true
+        ingressClassName: traefik
+        annotations:
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "plex"
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+          hosts:
+            - host: plex.${SECRET_PUBLIC_DOMAIN}
+              paths:
+                - path: /
+                  pathType: Prefix
     persistence:
       config:
         enabled: true
