--- a/cluster/apps/auth/openldap/helm-release.yaml
+++ b/cluster/apps/auth/openldap/helm-release.yaml
@@ -44,8 +44,8 @@ spec:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
+          # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          # external-dns/is-public: "true"
         hosts:
           - ldapadmin.${SECRET_PUBLIC_DOMAIN}
     ltb-passwd:
