--- a/cluster/apps/networking/ingressroutes/pihole-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/pihole-ingressroute.yaml
@@ -9,25 +9,25 @@ spec:
 
 ---
 
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: pihole-web-ingress
-  namespace: networking
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: "Host(`pihole.${SECRET_PUBLIC_DOMAIN}`)"
-      kind: Rule
-      middlewares:
-      - name: chain-authelia-auth
-        namespace: auth
-      - name: pihole-dashboard-addprefix
-        namespace: networking
-      services:
-        - name: pihole-web
-          namespace: pihole
-          port: 80
-  tls:
-    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: pihole-web-ingress
+#   namespace: networking
+# spec:
+#   entryPoints:
+#     - websecure
+#   routes:
+#     - match: "Host(`pihole.${SECRET_PUBLIC_DOMAIN}`)"
+#       kind: Rule
+#       middlewares:
+#       - name: chain-authelia-auth
+#         namespace: auth
+#       - name: pihole-dashboard-addprefix
+#         namespace: networking
+#       services:
+#         - name: pihole-web
+#           namespace: pihole
+#           port: 80
+#   tls:
+#     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
