--- a/cluster/apps/auth/openldap/helm-release.yaml
+++ b/cluster/apps/auth/openldap/helm-release.yaml
@@ -40,14 +40,7 @@ spec:
       env:
         PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: "never"
       ingress:
-        enabled: true
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
-          # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          # external-dns/is-public: "true"
-        hosts:
-          - ldapadmin.${SECRET_PUBLIC_DOMAIN}
+        enabled: false
     ltb-passwd:
       enabled : false
     customLdifFiles:
