--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -16,4 +16,6 @@ data:
   FLANNEL_IFACE: "eth0"
   APISERVER_ENDPOINT: "10.87.42.0"
   TRAEFIK_ENDPOINT: "10.87.42.10"
+  PIHOLE_ENDPOINT: "10.87.42.11"
+  PLEX_ENDPOINT: "10.87.42.12"
   METALLB_LB_RANGE: "10.87.42.10-10.87.42.20"
