--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
     service:
       main:
         type: LoadBalancer
-        loadBalancerIP: "10.87.42.12"
+        loadBalancerIP: "${PLEX_ENDPOINT}"
         port:
           port: 32400
     ingress:
@@ -56,9 +56,9 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-                service: 
-                  name: plex
-                  port: 32400
+                # service: 
+                #   name: plex
+                #   port: 32400
     persistence:
       config:
         enabled: true
