alternative service for plex

--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -40,6 +40,10 @@ spec:
       main:
         type: LoadBalancer
         loadBalancerIP: "${PLEX_ENDPOINT}"
+        port:
+          port: 32400
+      local:
+        type: ClusterIP
         externalTrafficPolicy: local
         port:
           port: 32400
