--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -40,13 +40,9 @@ spec:
       main:
         type: LoadBalancer
         loadBalancerIP: "${PLEX_ENDPOINT}"
-        port:
-          port: 32400
-      local:
-        type: ClusterIP
-        externalTrafficPolicy: local
-        port:
-          port: 32400
+        externalTrafficPolicy: Local
+        # port:
+        #   port: 32400
     ingress:
       main:
         enabled: true
@@ -62,9 +58,6 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-                # service: 
-                #   name: plex
-                #   port: 32400
     persistence:
       config:
         enabled: true
