--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -38,8 +38,8 @@ spec:
         - 109
     service:
       main:
-        type: LoadBalancer
-        loadBalancerIP: "${PLEX_ENDPOINT}"
+        type: ClusterIP #LoadBalancer
+        # loadBalancerIP: "${PLEX_ENDPOINT}"
         externalTrafficPolicy: Local
         # port:
         #   port: 32400
