--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -27,8 +27,7 @@ spec:
       # tag: 1.28.0.5999-97678ded3
     env:
       TZ: "${TIMEZONE}"
-      # PLEX_CLAIM: "claim-VkUiJdL5jwS-7zzDyyhH"
-      ALLOWED_NETWORKS: "10.0.0.0/8"
+      # PLEX_CLAIM: "claim-VkUiJdL5jwS-7zzDyyhH"W
     podSecurityContext:
       runAsUser: 568
       runAsGroup: 568
@@ -51,6 +50,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/icon: "plex"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: "redirect-web-to-443@internal"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
