this is how it was

--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -39,6 +39,8 @@ spec:
       main:
         type: LoadBalancer
         loadBalancerIP: "${PLEX_ENDPOINT}"
+        port:
+          port: 32400
     ingress:
       main:
         enabled: true
