--- a/cluster/apps/networking/externalroutes/nas0-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/nas0-externalroute.yaml
@@ -50,11 +50,12 @@ spec:
   ingressClassName: traefik
   rules:
     - host: nas0.${SECRET_PUBLIC_DOMAIN}
-      paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: nas0-externalname
-              port:
-                number: 5000
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nas0-externalname
+                port:
+                  number: 5000
