hajimari look in networking

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
         matchNames:
           - default
           - pihole
-          - mgmt
+          - networking
       name: "Ben"
       groups:
         - name: procrastination
