--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -37,8 +37,8 @@ spec:
         - 109
     service:
       main:
-        type: LoadBalancer
-        loadBalancerIP: "${PLEX_ENDPOINT}"
+        type: ClusterIP #LoadBalancer
+        # loadBalancerIP: "${PLEX_ENDPOINT}"
         port:
           port: 32400
     ingress:
