--- a/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
@@ -11,25 +11,51 @@ spec:
     port: 80 
   externalName: "${OCTOPRINT_IP}"
 
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: IngressRoute
+# metadata:
+#   name: octoprint-externalroute
+#   namespace: networking
+#   annotations:
+#     kubernetes.io/ingress.class: traefik 
+# spec:
+#   entryPoints:
+#     - websecure
+#   routes:
+#     - match: "Host(`octoprint.${SECRET_PUBLIC_DOMAIN}`)"
+#       kind: Rule
+#       services:
+#         - name: octoprint-externalname
+#           namespace: networking
+#           kind: Service
+#           port: 80
+#           scheme: http
+#   tls:
+#     secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
+
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   name: octoprint-externalroute
   namespace: networking
   annotations:
-    kubernetes.io/ingress.class: traefik 
+    hajimari.io/enable: "true"
+    hajimari.io/icon: "printer-3d-nozzle"
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+    external-dns/is-public: "true"
 spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: "Host(`octoprint.${SECRET_PUBLIC_DOMAIN}`)"
-      kind: Rule
-      services:
-        - name: octoprint-externalname
-          namespace: networking
-          kind: Service
-          port: 80
-          scheme: http
-  tls:
-    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
+  ingressClassName: traefik
+  rules:
+    - host: octoprint.${SECRET_PUBLIC_DOMAIN}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: octoprint-externalname
+                port:
+                  number: 80
