--- a/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
@@ -42,7 +42,7 @@ metadata:
   namespace: networking
   annotations:
     hajimari.io/enable: "true"
-    hajimari.io/icon: "printer-3d-nozzle"
+    hajimari.io/icon: "printer-3d"
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
     external-dns/is-public: "true"
