--- a/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/octoprint-externalroute.yaml
@@ -58,4 +58,4 @@ spec:
               service:
                 name: octoprint-externalname
                 port:
-                  number: 80
+                  number: 80W
