--- a/cluster/apps/pihole/pihole/helm-values.yaml
+++ b/cluster/apps/pihole/pihole/helm-values.yaml
@@ -29,7 +29,9 @@ spec:
     replicaCount: 1
     serviceDns:
       type: LoadBalancer
-      loadBalancerIP: "${PIHOLE_ENDPOINT}"
+      # loadBalancerIP: "${PIHOLE_ENDPOINT}"
+      externalIPs: 
+        - ${PIHOLE_ENDPOINT}
       externalTrafficPolicy: Cluster
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
