--- a/cluster/apps/default/grafana/helm-release.yaml
+++ b/cluster/apps/default/grafana/helm-release.yaml
@@ -22,7 +22,8 @@ spec:
     deploymentStrategy:
       type: Recreate
     image:
-      repository: ghcr.io/k8s-at-home/grafana
+      repository: grafana/grafana
+      tag: 9.1.4
     ingress:
       enabled: true
       ingressClassName: "traefik"
