--- a/cluster/core/networking/metallb/default-pool.yaml
+++ b/cluster/core/networking/metallb/default-pool.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   addresses:
   - "${METALLB_LB_RANGE}"
+  autoAssign: true
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
