--- a/cluster/core/networking/metallb/default-pool.yaml
+++ b/cluster/core/networking/metallb/default-pool.yaml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: default-pool
-  namespace: kube-system
+  namespace: networking
 spec:
   addresses:
   - "${METALLB_LB_RANGE}"
@@ -12,7 +12,7 @@ apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
   name: default-l2
-  namespace: kube-system
+  namespace: networking
 spec:
   ipAddressPools:
   - default-pool
