back to manually applying metallb crds

--- a/cluster/core/networking/metallb/helm-release.yaml
+++ b/cluster/core/networking/metallb/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       retries: 5
   values:
     crds:
-      enabled: true
+      enabled: false
     controller:
       enabled: true
       loglevel: debug
