--- a/cluster/apps/system-upgrade/system-upgrade-controller/plans/agent-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/plans/agent-plan.yaml
@@ -18,4 +18,4 @@ spec:
   serviceAccountName: system-upgrade
   upgrade:
     image: rancher/k3s-upgrade
-  channel: https://update.k3s.io/v1-release/channels/stable
+  channel: stable
