--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -5,19 +5,20 @@
   "dependencyDashboardTitle": "Renovate Dashboard",
   "suppressNotifications": ["prIgnoreNotification"],
   "rebaseWhen": "conflicted",
+  "timezone": "Pacific/Auckland",
   "schedule": [
     "every weekend"
   ],
   "assigneesFromCodeOwners": true,
   // set up ignored deps
-  "ignoreDeps": [
-    "ghcr.io/fluxcd/helm-controller",
-    "ghcr.io/fluxcd/image-automation-controller",
-    "ghcr.io/fluxcd/image-reflector-controller",
-    "ghcr.io/fluxcd/kustomize-controller",
-    "ghcr.io/fluxcd/notification-controller",
-    "ghcr.io/fluxcd/source-controller"
-  ],
+  // "ignoreDeps": [
+  //   "ghcr.io/fluxcd/helm-controller",
+  //   "ghcr.io/fluxcd/image-automation-controller",
+  //   "ghcr.io/fluxcd/image-reflector-controller",
+  //   "ghcr.io/fluxcd/kustomize-controller",
+  //   "ghcr.io/fluxcd/notification-controller",
+  //   "ghcr.io/fluxcd/source-controller"
+  // ],
   "pre-commit": {
     "enabled": true
   },
