--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,68 +10,49 @@
     "every weekend"
   ],
   "assigneesFromCodeOwners": true,
-  // set up ignored deps
-  // "ignoreDeps": [
-  //   "ghcr.io/fluxcd/helm-controller",
-  //   "ghcr.io/fluxcd/image-automation-controller",
-  //   "ghcr.io/fluxcd/image-reflector-controller",
-  //   "ghcr.io/fluxcd/kustomize-controller",
-  //   "ghcr.io/fluxcd/notification-controller",
-  //   "ghcr.io/fluxcd/source-controller"
-  // ],
   "pre-commit": {
     "enabled": true
   },
   "flux": {
-    "fileMatch": [
-      "cluster/.+\\.ya?ml$"
-    ]
+    "fileMatch": ["cluster/.+\\.ya?ml$"]
   },
   "helm-values": {
-    "fileMatch": [
-      "cluster/.+\\.ya?ml$"
-    ]
+    "fileMatch": ["cluster/.+\\.ya?ml$"]
   },
   "kubernetes": {
-    "fileMatch": [
-      "cluster/.+\\.ya?ml$",
-      "provision/ansible/.+\\.ya?ml.j2$"
-    ]
+    "fileMatch": ["cluster/.+\\.ya?ml$"]
   },
   "regexManagers": [
-    // Read and process GitHub Releases
     {
+      "description": "Process CRD dependencies",
+      "fileMatch": ["cluster/.+\\.ya?ml$"],
+      "matchStrings": [
+        // GitRepository where 'Git release/tag' matches 'Helm' version
+        "registryUrl=(?<registryUrl>\\S+) chart=(?<depName>\\S+)\n.*?(?<currentValue>[^-\\s]*)\n",
+        // Kustomization where 'GitHub release artifact URL' matches 'Docker image' version
+        "datasource=(?<datasource>\\S+) image=(?<depName>\\S+)\n.*?-\\s(.*?)\/(?<currentValue>[^/]+)\/[^/]+\n"
+      ],
+      "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}helm{{/if}}"
+    },
+    {
+      "description": "Process various dependencies",
       "fileMatch": [
-        "cluster/.+\\.ya?ml$",
-        "provision/ansible/.+\\.ya?ml$"
+        "cluster/.+\\.ya?ml$"
       ],
       "matchStrings": [
-        "datasource=(?<datasource>.*?)( versioning=(?<versioning>.*?))?\n *url: https:\/\/github\\.com\/(?<depName>.*?)\\.git\n *ref:\n *tag: (?<currentValue>.*)\n",
-        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\n.*?_version: \"(?<currentValue>.*)\"\n",
-        "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\n.*?_VERSION=\"(?<currentValue>.*)\"\n"
+        "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)( versioning=(?<versioning>\\S+))?\n.*?\"(?<currentValue>.*)\"\n"
       ],
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-releases{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     },
-    // regexManager to read and process cert-manager CRD's
     {
-      "fileMatch": [
-        "cluster/crds/cert-manager/.+\\.ya?ml$"
-      ],
+      "description": "Process raw GitHub URLs",
+      "fileMatch": ["cluster/.+\\.ya?ml$"],
       "matchStrings": [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n.*\\/(?<currentValue>.*?)\\/"
+        "https:\\/\\/raw.githubusercontent.com\\/(?<depName>[\\w\\d\\-_]+\\/[\\w\\d\\-_]+)\\/(?<currentValue>[\\w\\d\\.\\-_]+)\\/.*"
       ],
-      "datasourceTemplate": "helm"
-    },
-    // regexManager to read and process Traefik CRD's
-    {
-      "fileMatch": [
-        "cluster/crds/traefik/.+\\.ya?ml$"
-      ],
-      "matchStrings": [
-        "registryUrl=(?<registryUrl>.*?) chart=(?<depName>.*?)\n *tag: v(?<currentValue>.*)\n"
-      ],
-      "datasourceTemplate": "helm"
+      "datasourceTemplate": "github-releases",
+      "versioningTemplate": "semver"
     }
   ],
   "packageRules": [
@@ -90,6 +71,7 @@
       "matchUpdateTypes": ["major", "minor", "patch"]
     },
     // add labels according to package and update types
+    // docker
     {
       "matchDatasources": ["docker"],
       "matchUpdateTypes": ["major"],
@@ -105,20 +87,37 @@
       "matchUpdateTypes": ["patch"],
       "labels": ["renovate/image", "dep/patch"]
     },
+    // helm
     {
-      "matchDatasources": ["helm", "kubernetes-api"],
+      "matchDatasources": ["helm"],
       "matchUpdateTypes": ["major"],
       "labels": ["renovate/helm", "dep/major"]
     },
     {
-      "matchDatasources": ["helm", "kubernetes-api"],
+      "matchDatasources": ["helm"],
       "matchUpdateTypes": ["minor"],
       "labels": ["renovate/helm", "dep/minor"]
     },
     {
-      "matchDatasources": ["helm", "kubernetes-api"],
+      "matchDatasources": ["helm"],
       "matchUpdateTypes": ["patch"],
       "labels": ["renovate/helm", "dep/patch"]
+    },
+    // kubernetes-api
+    {
+      "matchDatasources": ["kubernetes-api"],
+      "matchUpdateTypes": ["major"],
+      "labels": ["renovate/kubernetes-api", "dep/major"]
+    },
+    {
+      "matchDatasources": ["kubernetes-api"],
+      "matchUpdateTypes": ["minor"],
+      "labels": ["renovate/kubernetes-api", "dep/minor"]
+    },
+    {
+      "matchDatasources": ["kubernetes-api"],
+      "matchUpdateTypes": ["patch"],
+      "labels": ["renovate/kubernetes-api", "dep/patch"]
     }
   ]
 }
