--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,4 +1,9 @@
 {
+  "extends": [
+    "github>lucidph3nx/home-ops//.github/renovate/disabledDatasources.json5",
+    "github>lucidph3nx/home-ops//.github/renovate/labels.json5"
+  ],
+  "platform": "github",
   "enabled": true,
   "semanticCommits": "enabled",
   "dependencyDashboard": true,
@@ -53,71 +58,6 @@
       ],
       "datasourceTemplate": "github-releases",
       "versioningTemplate": "semver"
-    }
-  ],
-  "packageRules": [
-    // setup datasources
-    {
-      "matchDatasources": ["helm", "kubernetes-api"],
-      "separateMinorPatch": true,
-      "ignoreDeprecated": true
-    },
-    // global docker datasource settings
-    {
-      "matchDatasources": ["docker"],
-      "enabled": true,
-      "commitMessageTopic": "container image {{depName}}",
-      "commitMessageExtra": "to {{#if isSingleVersion}}v{{{newVersion}}}{{else}}{{{newValue}}}{{/if}}",
-      "matchUpdateTypes": ["major", "minor", "patch"]
-    },
-    // add labels according to package and update types
-    // docker
-    {
-      "matchDatasources": ["docker"],
-      "matchUpdateTypes": ["major"],
-      "labels": ["renovate/image", "dep/major"]
-    },
-    {
-      "matchDatasources": ["docker"],
-      "matchUpdateTypes": ["minor"],
-      "labels": ["renovate/image", "dep/minor"]
-    },
-    {
-      "matchDatasources": ["docker"],
-      "matchUpdateTypes": ["patch"],
-      "labels": ["renovate/image", "dep/patch"]
-    },
-    // helm
-    {
-      "matchDatasources": ["helm"],
-      "matchUpdateTypes": ["major"],
-      "labels": ["renovate/helm", "dep/major"]
-    },
-    {
-      "matchDatasources": ["helm"],
-      "matchUpdateTypes": ["minor"],
-      "labels": ["renovate/helm", "dep/minor"]
-    },
-    {
-      "matchDatasources": ["helm"],
-      "matchUpdateTypes": ["patch"],
-      "labels": ["renovate/helm", "dep/patch"]
-    },
-    // kubernetes-api
-    {
-      "matchDatasources": ["kubernetes-api"],
-      "matchUpdateTypes": ["major"],
-      "labels": ["renovate/kubernetes-api", "dep/major"]
-    },
-    {
-      "matchDatasources": ["kubernetes-api"],
-      "matchUpdateTypes": ["minor"],
-      "labels": ["renovate/kubernetes-api", "dep/minor"]
-    },
-    {
-      "matchDatasources": ["kubernetes-api"],
-      "matchUpdateTypes": ["patch"],
-      "labels": ["renovate/kubernetes-api", "dep/patch"]
     }
   ]
 }
