--- a/cluster/apps/default/sabnzbd/helm-release.yaml
+++ b/cluster/apps/default/sabnzbd/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
   values:
     image:
       repository: lscr.io/linuxserver/sabnzbd
-      tag: 3.6.1
+      tag: "3.6.1"
     env:
       TZ: "${TIMEZONE}"
       SABNZBD__PORT: 80
