--- a/cluster/apps/default/sabnzbd/helm-release.yaml
+++ b/cluster/apps/default/sabnzbd/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
     initContainers:
         - name: init-chown
           image: busybox:1.28
-          command: [ 'sh', '-c', 'chown -R /*']
+          command: [ 'sh', '-c', 'chown -R 1000:1000 /']
     image:
       repository: lscr.io/linuxserver/sabnzbd
       tag: "3.6.1"
