diable generator hash

--- a/cluster/apps/networking/traefik/addons/theme-park/kustomization.yaml
+++ b/cluster/apps/networking/traefik/addons/theme-park/kustomization.yaml
@@ -4,7 +4,8 @@ kind: Kustomization
 namespace: networking
 resources:
   - header-middleware.yaml
-
+generatorOptions:
+  disableNameSuffixHash: true
 configMapGenerator:
   - name: traefik-middleware
     files:
