--- a/cluster/apps/default/sonarr/helm-release.yaml
+++ b/cluster/apps/default/sonarr/helm-release.yaml
@@ -41,6 +41,8 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "television-box"
           traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd,sonarr-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
