--- a/cluster/apps/networking/externalroutes/nas0-externalroute.yaml
+++ b/cluster/apps/networking/externalroutes/nas0-externalroute.yaml
@@ -43,6 +43,7 @@ metadata:
   annotations:
     hajimari.io/enable: "true"
     hajimari.io/icon: "nas"
+    hajimari.io/appName: "nas0"
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
     external-dns/is-public: "true"
