use metallb container tag defaults for helm chart

--- a/cluster/core/networking/metallb/helm-release.yaml
+++ b/cluster/core/networking/metallb/helm-release.yaml
@@ -26,12 +26,12 @@ spec:
     controller:
       enabled: true
       loglevel: debug
-      image:
-        respository: quay.io/metallb/controller
-        tag: v0.13.5
+      # image:
+      #   respository: quay.io/metallb/controller
+      #   tag: v0.13.5
     speaker:
       enabled: true
       loglevel: debug
-      image:
-        respository: quay.io/metallb/controller
-        tag: v0.13.5
+      # image:
+      #   respository: quay.io/metallb/controller
+      #   tag: v0.13.5
