back to annotation for traefik svc

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -33,11 +33,11 @@ spec:
     service:
       enabled: true
       type: LoadBalancer
-      # annotations:
-      #   metallb.universe.tf/loadBalancerIPs: ${TRAEFIK_ENDPOINT}
-      spec:
-        externalIPs: 
-        - ${TRAEFIK_ENDPOINT}
+      annotations:
+        metallb.universe.tf/loadBalancerIPs: ${TRAEFIK_ENDPOINT}
+      # spec:
+      #   externalIPs: 
+      #   - ${TRAEFIK_ENDPOINT}
         # loadBalancerIP: "${TRAEFIK_ENDPOINT}"
     experimental:
       plugins:
