trying to sort out traefik rbac

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -43,6 +43,8 @@ spec:
     experimental:
       plugins:
         enabled: true
+    rbac:
+      enabled: false
     ingressRoute:
       dashboard:
         enabled: true
