existing service account

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -45,6 +45,8 @@ spec:
         enabled: true
     rbac:
       enabled: false
+      serviceAccount:
+        name: traefik-ingress-controller
     ingressRoute:
       dashboard:
         enabled: true
