add pub ip to advertise ip

--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 type: Opaque
 stringData:
     SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:MgDplwX02G6Z773fHaqLLw==,iv:NAidvOX/3v0+fMpKv/QE7bVenegb/f58tKtAKgWFgHA=,tag:0YUBKjohUNpBqiUF0Z/MrA==,type:str]
+    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:+BDlTr4P1gajjFlf,iv:wzcQlTcGLriQLkGU7QzEDwZ0PzvtBvUXP0AlfLWNiYs=,tag:9bVCLQ9kpHBU1hSn2skK/w==,type:str]
     SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:REPBmS68OZ/rND9ZHPDa+E0LlYo=,iv:BpYnR7htujt2KJoPMGj4yLrJNExIJWV/dIeh36qaFFg=,tag:l4RTS/AHIFr6yyG0zeYPEQ==,type:str]
     SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:bwQgAhcNEbg5eTiMaoKhnLmA/6N2BfhiArmfms1L,iv:+ClRicelfKj9p6jiAWijR7dcKxOJ6BA/Ypm+1D6dKmo=,tag:WuNprAE1FrGTVzlMOf7EVQ==,type:str]
     SECRET_TEST_EMAIL: ENC[AES256_GCM,data:jtMt0hP6M/KMSZNes0bCbmRC+tLh,iv:uswjgPpf70hoMSpUcW13HOUk0K4zXnWEnGDHcaPddk8=,tag:8455105ikfio09YFvQEorw==,type:str]
@@ -28,8 +29,8 @@ sops:
             THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
             TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-06-03T01:06:13Z"
-    mac: ENC[AES256_GCM,data:5akHGoojJu7hAQPyHWm4poyKtCPNbyPyJ9l2WeYoN0C7vua/B4HtF+Ca87Pq+gBW8iy7Nn4gmzouAlx9Q9/7Q1m1lKw9I/mJMWZW32FKzmCoUy+QNq3g9IF7xn2o/Hh8Sjs/oXymKm0ZTU84ReCK4poT6jsRbSXo07IvTc23UB8=,iv:piOI9B7ySnyS5+SwbU4lrNPatKOJUpNyxX/mjdiEMIg=,tag:J5jURc8Kd3vLIhupelI13w==,type:str]
+    lastmodified: "2022-10-21T23:53:28Z"
+    mac: ENC[AES256_GCM,data:Y6MKIyuU8Ia3RusFGn/YARDiYcGB+0Wy9xXMlXU0485jQOXDjXvGQv4m+UmLeC0RN2Cku38Pi2i8L7kiTuhKiBz9XHphmmE+paj6ymXxR9f4rnOR5nsfMmpJw5+qIknGRsMaSU2LCAoetzrIxE/YIL6x/J/Upaw/r1nyKJ8Ro1Q=,iv:MW4ZA9N8eNSDBpd2X1csSfyQampyPCPCD3oiJA7PXPI=,tag:I3LWJlVcXfzvPJLhkMSZfw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
